@@ -12,7 +12,7 @@ dnl
 AC_INIT(auth_mysql.c)
 AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(configuration.h)
-AM_INIT_AUTOMAKE(tpop3d, "1.4.2pre2")
+AM_INIT_AUTOMAKE(tpop3d, "1.4.2pre3")
 
 AC_DEFINE_UNQUOTED(TPOP3D_VERSION, "$VERSION", [The tpop3d version number])
 
@@ -65,7 +65,8 @@ AC_ARG_ENABLE(auth-mysql,
 AC_ARG_WITH(mysql-root,
         [    --with-mysql-root=DIR     Set root of MySQL distribution used by auth_mysql.
                               Should contain include/mysql/mysql.h and
-                              lib/mysql/libmysqlclient.so [default=/usr]],
+                              lib/mysql/libmysqlclient.so [default=/usr]
+],
     [mysql_root=$withval],
     [mysql_root="/usr"])
 
@@ -77,19 +78,29 @@ AC_ARG_ENABLE(auth-ldap,
     
 AC_ARG_WITH(openldap-root,
         [    --with-openldap-root=DIR  Root directory of the OpenLDAP installation.
-                              [default=/usr]],
+                              [default=/usr]
+],
     [openldap_root=$withval],
     [openldap_root="/usr"])
 
+AC_ARG_ENABLE(auth-flatfile,
+        [  --enable-auth-flatfile  Enable authentication against /etc/passwd-style flat
+                          files. [default=no]
+],
+    [enable_auth_flatfile=$enableval],
+    [enable_auth_flatfile="no"])
+
 AC_ARG_ENABLE(auth-other,
         [  --enable-auth-other     Enable authentication by an external program.
-                          [default=no]],
+                          [default=no]
+],
     [enable_auth_other=$enableval],
     [enable_auth_other="no"])
 
 AC_ARG_ENABLE(auth-perl,
         [  --enable-auth-perl      Enable authentication by embedded perl subroutines.
-                          [default=no]],
+                          [default=no]
+],
     [enable_auth_perl=$enableval],
     [enable_auth_perl="no"])
 
@@ -132,7 +143,7 @@ AC_ARG_ENABLE(cclient-locking,
 AC_ARG_ENABLE(cclient-fcntl,
     [    --enable-cclient-fcntl    Lock C-Client lockfiles with fcntl(2),
                               rather than flock(2). [default=no]
-        ],
+],
 
     [enable_cclient_uses_fcntl=$enableval],
     [enable_cclient_uses_fcntl=no])
@@ -145,7 +156,7 @@ AC_ARG_ENABLE(mbox-bsd-save-indices,
     --enable-mbox-bsd-save-indices 
                               Save a metadata cache for BSD mailboxes
                               [default=no]
-        ],
+],
     [enable_mbox_bsd_save_indices=$enableval],
     [enable_mbox_bsd_save_indices=no])
 
@@ -199,7 +210,7 @@ AC_ARG_ENABLE(backtrace,
                           [default=no]
         
 Confused? You should be. Read the INSTALL file for more information.
-        ],
+],
     [enable_backtrace=$enableval],
     [enable_backtrace=no])
 
@@ -231,6 +242,12 @@ if test x"$enable_auth_ldap" = x"yes"
 then
     AC_DEFINE(AUTH_LDAP,1,[Use LDAP authentication.])
 fi
+
+if test x"$enable_auth_flatfile" = x"yes"
+then
+    AC_DEFINE(AUTH_FLATFILE,1,[Use flat file authentication.])
+fi
+
 
 if test x"$enable_auth_other" = x"yes"
 then
@@ -351,7 +368,7 @@ then
 fi
 
 # Some machines have crypt(3) in libcrypt; test for this.
-if test x"$enable_auth_passwd" = x"yes" || test x"$enable_shadow" = x"yes" || test x"$enable_auth_mysql" = x"yes"
+if test x"$enable_auth_passwd" = x"yes" || test x"$enable_shadow" = x"yes" || test x"$enable_auth_mysql" = x"yes" || test x"$enable_auth_flatfile" = x"yes"
 then
     AC_CHECK_LIB(crypt, crypt, , )
 fi
