@@ -9,6 +9,10 @@ log-facility: local0
 
 apop-only:  yes
 
+no-detach: yes
+
+log-stderr: yes
+
 max-children:           16
 
 mailbox:                maildir:$(home)/Maildir /var/spool/mail/$(user)
@@ -24,7 +28,6 @@ auth-pam-enable:        yes
 auth-pam-facility:      tpop3d
 auth-pam-mail-group:    mail
 
-<<<<<<< tpop3d.conf
 #auth-ldap-enable:       no
 #auth-ldap-url:          ldap://saline.cold.local/o=saline.cold.local
 #auth-ldap-searchdn:     cn=Manager,o=saline.cold.local
@@ -38,7 +41,7 @@ auth-pam-mail-group:    mail
 #auth-mysql-database:    vmail
 #auth-mysql-username:    vmail
 #auth-mysql-password:    moocow
-=======
+
 auth-ldap-enable:       yes
 auth-ldap-url:          ldap://saline.cold.local/o=saline.cold.local
 auth-ldap-searchdn:     cn=Manager,o=saline.cold.local
@@ -52,23 +55,23 @@ auth-mysql-enable:      no
 auth-mysql-database:    vmail
 auth-mysql-username:    vmail
 auth-mysql-password:    moocow
->>>>>>> 1.27
+
 #auth-mysql-pass-query:  none
 #auth-mysql-apop-query:  none
 #auth-mysql-onlogin-query:   insert into relayers (user, domain, host) \
                               values ('$(local_part)', '$(domain)', '$(clienthost)')
 
-<<<<<<< tpop3d.conf
+
 #auth-other-enable:      yes
 #auth-other-program:     /home/chris/software/tpop3d/scripts/ruby-sample
 #auth-other-user:        root
 #auth-other-group:       root
-=======
+
 auth-other-enable:      no
 auth-other-program:     /home/chris/software/tpop3d/scripts/ruby-sample
 auth-other-user:        root
 auth-other-group:       root
->>>>>>> 1.27
+
 
 #auth-perl-enable:       yes
 #auth-perl-start:        do '/home/chris/software/tpop3d/luser';
